header and row order sync + converters

--- a/example/app/views/main.html
+++ b/example/app/views/main.html
@@ -7,6 +7,7 @@
      hiding-properties="hidingProperties"
      delete-row="deleteRow(item)"
      edit-row="editRow(item)"
+     converters="converters"
      select-row="select(item)">
 </div>
 
