pagination type + default page size

--- a/example/app/views/main.html
+++ b/example/app/views/main.html
@@ -3,6 +3,8 @@
      refresh="refresh(data)"
      header="headerControls"
      page-sizes="pageSizes"
+     default-page-size="10"
+     pagination-type="explicit"
      sorting-properties="sortingProperties"
      hiding-properties="hidingProperties"
      delete-row="deleteRow(item)"
