custom header titles

--- a/example/app/views/main.html
+++ b/example/app/views/main.html
@@ -5,6 +5,7 @@
      page-sizes="pageSizes"
      default-page-size="10"
      pagination-type="explicit"
+     header-titles="customTitles"
      sorting-properties="sortingProperties"
      hiding-properties="hidingProperties"
      delete-row="deleteRow(item)"
